ingressroute-keycloak-met-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("keycloak.dhub.test.cloud.kadaster.nl")
      priority: 10
      services:
        - kind: Service
          name: my-keycloak
          namespace: keycloak
          port: 80
          scheme: http
      middlewares:
        - name: keycloak-forwarded-headers
---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-forwarded-headers
  namespace: keycloak
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "keycloak.dhub.test.cloud.kadaster.nl"
      X-Forwarded-Port: "443"
    customResponseHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "keycloak.dhub.test.cloud.kadaster.nl"
      X-Forwarded-Port: "443"
