ingressroute-keycloak.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web

  routes:
    - kind: Rule
      match: Host("keycloak.dhub.test.cloud.kadaster.nl")
      priority: 10
      services:
        - kind: Service
          name: my-keycloak
          namespace: keycloak
          passHostHeader: true
          port: 80
          scheme: http
